[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/character/enemies/Bee/Bee.gd" type="Script" id=1]
[ext_resource path="res://assets/audio/enemy_hit.ogg" type="AudioStream" id=2]
[ext_resource path="res://assets/character/enemies/Bee/Bee.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8.57699, 13.0192 )

[sub_resource type="Animation" id=2]
resource_name = "Attack"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Fly"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 13, 14, 15 ]
}

[sub_resource type="Animation" id=4]
resource_name = "death"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 20, 19, 18, 17, 16 ]
}

[sub_resource type="Animation" id=5]
resource_name = "idle"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[node name="Bee" type="KinematicBody2D" groups=[
"enemies",
]]
scale = Vector2( 0.65, 0.65 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )
vframes = 3
hframes = 8
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.062, 1 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 2 )
anims/Fly = SubResource( 3 )
anims/death = SubResource( 4 )
anims/idle = SubResource( 5 )

[node name="HitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="IdleTimer" type="Timer" parent="."]
wait_time = 1.8
one_shot = true

[node name="EndAttack" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="IdleTimer" to="." method="_on_IdleTimer_timeout"]
[connection signal="timeout" from="EndAttack" to="." method="_on_EndAttack_timeout"]
